<resources>
    <string name="app_name">Next-App</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="Notifications">Notifications</string>
    <string name="maintitle_header">Next</string>
    <string name="sync_header">Sync</string>
    <string name="current_file">Current Schedule</string>

    <!-- Messages Preferences -->
    <string name="addNew_description">Create new Schedule</string>
    <string name="settings_description">Edit Settings</string>

    <!-- Settings Preferences -->
    <string name="minutes">Minutes early</string>
    <string name="language">Language</string>
    <string name="everyonce">Every x days</string>
    <string name="sync_title">Sync schedule periodically</string>

    <!-- Stub viewer -->
    <string name="coursename">Course Name</string>
    <string name="teachername">Teacher Name</string>
    <string name="classname">Class</string>

    <!-- Add New Schedule Activity -->
    <string name="create">Create</string>
    <string name="degree">Degree</string>
    <string name="year">Year</string>

    <!-- Schedule popup menu -->
    <string name="view">View</string>
    <string name="set_as_current">Set as current</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="title_activity_schedule_viewer">ScheduleViewer</string>
    <string name="title_activity_phone__add_new_schedule_">Phone_AddNewSchedule_Activity</string>
    <string name="fileName">filename</string>
</resources>
