<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications"
            android:title="@string/Notifications" />
        <EditTextPreference
            android:key="minutes"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/minutes" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Sync">

        <SwitchPreferenceCompat
            android:id="@+id/sync"
            android:defaultValue="true"
            app:key="sync"
            app:title="@string/sync_title" />

        <EditTextPreference
            android:id="@+id/every_x_days"
            android:defaultValue="7"
            android:dependency="sync"
            android:key="days"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/everyonce" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Other">

        <ListPreference
            android:defaultValue="false"
            android:entries="@array/languages"
            android:entryValues="@array/languageAlias"
            android:key="list_preference_1"
            android:title="List preference" />
    </PreferenceCategory>

</PreferenceScreen>
