<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phone_MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="393dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="11dp"
            android:text="@string/maintitle_header"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/headerSettings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/headerSettings"
            android:layout_width="33dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/settings_description"
            android:onClick="onClick_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <ImageButton
            android:id="@+id/headerAddNew"
            android:layout_width="44dp"
            android:layout_height="43dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="13dp"
            android:background="@null"
            android:contentDescription="@string/addNew_description"
            android:onClick="onClick_addNew"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="393dp"
        android:layout_height="737dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/sscheduleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="82dp"
                android:layout_height="47dp"
                android:onClick="onClick_parse"
                android:text="Parse" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>